
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
typedef int enet_uint32 ;


 int ENET_HOST_TO_NET_32 (unsigned int) ;
 int sscanf (int *,char*,unsigned int*,unsigned int*,unsigned int*,unsigned int*) ;

enet_uint32 myinetaddr(u_char *ip) {
    unsigned ip1,
                ip2,
                ip3,
                ip4;

    sscanf(ip, "%d.%d.%d.%d", &ip1, &ip2, &ip3, &ip4);
    return(ENET_HOST_TO_NET_32((ip1 << 24) | (ip2 << 16) | (ip3 << 8) | ip4));
}
