; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1560.c_myinetaddr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_1560.c_myinetaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"%d.%d.%d.%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @myinetaddr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @sscanf(i32* %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %3, i32* %4, i32* %5, i32* %6)
  %9 = load i32, i32* %3, align 4
  %10 = shl i32 %9, 24
  %11 = load i32, i32* %4, align 4
  %12 = shl i32 %11, 16
  %13 = or i32 %10, %12
  %14 = load i32, i32* %5, align 4
  %15 = shl i32 %14, 8
  %16 = or i32 %13, %15
  %17 = load i32, i32* %6, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @ENET_HOST_TO_NET_32(i32 %18)
  ret i32 %19
}

declare dso_local i32 @sscanf(i32*, i8*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ENET_HOST_TO_NET_32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
